    gnutls. (Closes: #566167)
  * Install the html-flash-element extension in the -common package.
  * Make libggadget-gtk-1.0-dev and libggadget-qt-1.0-dev depend respectively
    on libgtk2.0-dev and libqt4-dev, as they use their host libraries in the
    public headers.
  * Add patch 05_hurd_pthread.patch to force linking with pthread (workaround
    Hurd issue).

 -- Debian Krap Maintainers <debian-qt-kde@lists.debian.org>  Sun, 31 Jan 2010 17:09:52 +0100

google-gadgets (0.11.1-2) unstable; urgency=low

  [ Fathi Boudra ]
  * Update debian/control: set Debian Krap Maintainers as maintainer.
  * Bump debian/compat to 7.
  * Switch to dh.

  [ Michael Biebl ]
  * Update debian/control:
    - Point the Vcs-* fields to the pkg-kde SVN.

  [ Pino Toscano ]
  * Add 04_hurd.patch:
    - configure.ac: correctly detect GNU/Hurd. (Closes: #550948)

 -- Debian Krap Maintainers <debian-qt-kde@lists.debian.org>  Tue, 19 Jan 2010 19:30:48 +0100

google-gadgets (0.11.1-1.1) unstable; urgency=low

  * Non-maintainer upload to fix broken ABI:
    - Rename library packages.
    - Conflict against old libraries
    - Update -dev packages dependency

 -- Fathi Boudra <fabo@debian.org>  Mon, 11 Jan 2010 09:55:21 +0100

google-gadgets (0.11.1-1) unstable; urgency=low

  * New upstream release (Closes: 534719)
  * Added shared-mime-info as a dependency for google-gadgets-common
    (Closes: 559077)
  * Added google-gadgets-xul as a dependency of google-gadgets-qt
    (Closes: 513175)
  * Excluded network-manager-dev from build-depends on hurd-i386,
    It might build on hurd now, if so: Closes: 550948
  * Adjusted capitalisation of "QT" to "Qt" (Closes: 554625)
  * Removed 99_relibtoolize.patch, we run autoreconf preconfigure now

 -- Jack Coulter <jscinoz@gmail.com>  Mon, 21 Dec 2009 09:42:37 +1100

google-gadgets (0.10.5-0.3) unstable; urgency=low

  * Non-maintainer upload for transition to xulrunner 1.9.1.
    (Closes: #548677)
  * debian/rules: Use dh_xulrunner