@@ -1,3 +1,4 @@
+Description: enable maintainer mode
 --- a/configure.ac
 +++ b/configure.ac
 @@ -34,6 +34,7 @@ AC_CONFIG_SRCDIR([ggadget/common.h])
